Fixed a spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ header nav ul li {
 .fawn,
 .stone,
 .red {
-  padding-bottom: 1em;
+  padding-bottom: .5em;
 }
 
 /*End Corgi logo styles*/
